syntax = "proto3";

package products;

option go_package = "./pkg/pb";

service ProductManagement{
    rpc AddSizeBazedPrize(AddSizeBazedPrizeRequest) returns (AddSizeBazedPrizeResponse) {}
}

message AddSizeBazedPrizeRequest{
    string name = 1;
    string pricerange = 2;
}
message AddSizeBazedPrizeResponse{
    int64 status = 1;
    string error = 2;
    string sizeid = 3;
}

// export PATH="$PATH:$(go env GOPATH)/bin"
// protoc --go_out=. --go-grpc_out=. pkg/pb/product.proto